# primitives

./: .gitignore  .xlings.json  CMakeLists.txt  LICENSE  README.md  README.zh.md  xmake.lua
.agents/docs/: RFC.md  architecture.md
.agents/docs/plans/: implementation-plan.md
.github/: copilot-instructions.md
.github/prompts/: plan-policyBehaviorProtocol.prompt.md
.github/workflows/: ci.yml
docs/: README.md
docs/api/: README.md
docs/api/en/: README.md
docs/api/zh/: README.md
docs/guide/: README.md
docs/guide/en/: README.md  concurrency.md  extension.md  installation-and-build.md  quick-start.md
docs/guide/zh/: README.md  concurrency.md  extension.md  installation-and-build.md  quick-start.md
examples/: CMakeLists.txt  basic.cpp  ex01_basic_usage.cpp  ex01_default_arithmetic.cpp  ex02_type_policy.cpp  ex03_value_policy.cpp  ex04_error_policy.cpp  ex05_concurrency_policy.cpp  ex06_conversion.cpp  ex06_custom_underlying.cpp  ex07_algorithms.cpp  ex07_custom_policy.cpp  ex08_custom_operation.cpp  ex08_custom_underlying.cpp  ex09_custom_policy.cpp  ex10_custom_operation.cpp  xmake.lua
src/: primitive.cppm  primitives.cppm  templates.cppm
src/algorithms/: algorithms.cppm  hash.cppm  limits.cppm
src/conversion/: conversion.cppm  mixing.cppm  primitive.cppm  traits.cppm  underlying.cppm
src/literals/: literals.cppm
src/operations/: binding.cppm  dispatcher.cppm  impl.cppm  invoker.cppm  operations.cppm  operators.cppm  traits.cppm
src/policy/: handler.cppm  impl.cppm  policy.cppm  traits.cppm  utility.cppm
src/primitive/: impl.cppm  traits.cppm
src/primitives/: impl.cppm  primitive.cppm  primitive.impl.cppm  primitive.traits.cppm  traits.cppm
src/traits/: policy.cppm  traits.cppm  underlying.cppm
src/underlying/: impl.cppm  literals.cppm  traits.cppm  underlying.cppm
tests/: CMakeLists.txt  xmake.lua
tests/basic/: CMakeLists.txt  test_conversion.cpp  test_operations.cpp  test_policies.cpp  test_templates.cpp  test_underlying.cpp
tests/basic/algorithms/hash/: test_hash.cpp
tests/basic/algorithms/limits/: test_limits.cpp
tests/basic/conversion/primitive/: test_primitive_casts.cpp
tests/basic/conversion/primitive_underlying/: test_mixed_casts.cpp
tests/basic/conversion/traits/: test_numeric_risk.cpp  test_result_types.cpp
tests/basic/conversion/underlying/: test_builtin_casts.cpp  test_builtin_casts_ext.cpp  test_underlying_casts.cpp
tests/basic/literals/: test_literals.cpp
tests/basic/operations/dispatcher/: test_core_runtime.cpp  test_type_policy.cpp
tests/basic/operations/error/: test_throwing_policy.cpp
tests/basic/operations/operators/: test_framework_and_compound.cpp
tests/basic/operations/traits/: test_capability_traits.cpp
tests/basic/policy/concurrency/: test_handler_access.cpp
tests/basic/policy/protocol/: test_handler_protocols.cpp
tests/basic/policy/traits/: test_builtin_policies.cpp
tests/basic/primitive/factory/: test_make_primitive.cpp
tests/basic/primitive/traits/: test_meta_traits.cpp
tests/basic/support/: conversion_box_types.hpp  underlying_custom_types.hpp
tests/basic/underlying/common_rep/: test_common_rep_and_type_policy.cpp
tests/basic/underlying/integration/: test_operations_dispatcher.cpp
tests/basic/underlying/literals/: test_literals.cpp
tests/basic/underlying/traits/: test_concepts_and_registration.cpp
